# pydeps

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
.github/: publish.yaml
depvex/: cli.py  parser.py  resolver.py  watcher.py
tests/: test_cli.py
