[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"


[project]
name = "depvex"
dynamic = ["version"]
description = "Dependency and environment checker tool"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Shmuel Barda" }
]

dependencies = [
  "requests==2.34.2",
  "watchdog==6.0.0"
]

[project.scripts]
depvex = "depvex.cli:main"


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["depvex*"]
exclude = ["depvex.__pycache__", "depvex.__pycache__.*"]

[tool.setuptools.exclude-package-data]
depvex = ["**/__pycache__/**", "**/*.py[cod]"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>.*)$"